--- a/css/main.css
+++ b/css/main.css
@@ -690,6 +690,8 @@ h1 {
   }
   .navbar__menu.active {
     left: 0;
+    width: 100%;
+    transition: 0.5s;
   }
   .footer {
     color: #f0f8ff;
