--- a/css/main.css
+++ b/css/main.css
@@ -410,6 +410,8 @@ h1 {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  -o-object-fit: cover;
+     object-fit: cover;
   z-index: -100;
   height: 75vh;
 }
