--- a/sass/main.scss
+++ b/sass/main.scss
@@ -405,6 +405,7 @@ h1 {
 		justify-content: center;
 		align-items: center;
 		flex-direction: column;
+		object-fit: cover;
 		z-index: -100;
 		height: 75vh;
 	}
