--- a/sass/main.scss
+++ b/sass/main.scss
@@ -120,11 +120,11 @@ html {
 		width: 100%;
 		@include heroImages('../img/hero.jpg');
 		position: absolute;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		flex-direction: column;
-		z-index: -100;
+		// display: flex;
+		// justify-content: center;
+		// align-items: center;
+		// flex-direction: column;
+		// z-index: -100;
 		height: 75vh;
 		animation: zoom-in-zoom-out 40s ease infinite;
 	}
@@ -492,7 +492,7 @@ h1 {
 	
 	color: $white;
 	@include sectionImages('../img/footer.jpg');
-	background-repeat: no-repeat;
+	// background-repeat: no-repeat;
 
 	.wrapper {
 		padding: 6em 2em 2em;
