--- a/css/main.css
+++ b/css/main.css
@@ -148,7 +148,7 @@ html {
 }
 .header__img {
   top: 0;
-  width: 100%;
+  width: 100vw;
   background-image: linear-gradient(rgba(61, 57, 53, 0.76), rgba(61, 57, 53, 0.76)), url("../img/hero.jpg");
   background-size: cover;
   background-position: center;
@@ -387,6 +387,7 @@ h1 {
   align-items: center;
   flex-direction: column;
   height: 75vh;
+  width: 100%;
   text-align: center;
   background-attachment: scroll;
 }
