--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -2,7 +2,7 @@
     background-image:linear-gradient(rgba(61, 57, 53, 0.76), rgba(61, 57, 53, 0.76)), url($bgImg);
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
+    // background-attachment: fixed;
 }
 
 @mixin sectionImages($bgImg) {
