--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -8,4 +8,6 @@
 @mixin sectionImages($bgImg) {
     background-image:linear-gradient(rgba(61, 57, 53, 0.76), rgba(61, 57, 53, 0.76)), url($bgImg);
     background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
 }
