--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -11,3 +11,11 @@
     background-size: cover;
     background-position: center;
 }
+
+@mixin partyImages($bgpImg) {
+    background-image:linear-gradient(rgba(61, 57, 53, 0.76), rgba(61, 57, 53, 0.76)), url($bgpImg);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
