--- a/sass/main.scss
+++ b/sass/main.scss
@@ -393,20 +393,21 @@ h1 {
 	height: 75vh;
 	width: 100%;
 	text-align: center;
-	background-attachment: scroll;
+	// background-attachment: scroll;
 	
 	&__img {
 		
 		top: 0;
-		background-attachment: scroll;
+		// background-attachment: scroll;
 		width: 100%;
-		@include heroImages('../img/wp.jpg');
+		@include partyImages('../img/wp.jpg');
 		position: absolute;
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		flex-direction: column;
 		object-fit: cover;
+		
 		z-index: -100;
 		height: 75vh;
 	}
