--- a/css/main.css
+++ b/css/main.css
@@ -391,6 +391,7 @@ h1 {
 }
 .party__img {
   top: 0;
+  background-image: linear-gradient(rgba(61, 57, 53, 0.76), rgba(61, 57, 53, 0.76)), url("../img/wp.jpg");
   width: 100%;
   background-image: linear-gradient(rgba(61, 57, 53, 0.76), rgba(61, 57, 53, 0.76)), url("../img/wp.jpg");
   background-size: cover;
