--- a/sass/main.scss
+++ b/sass/main.scss
@@ -404,7 +404,7 @@ h1 {
     background-position: center;
     background-attachment: fixed;
 		width: 100%;
-		@include partyImages('../img/wp.jpg');
+		// @include partyImages('../img/wp.jpg');
 		position: absolute;
 		display: flex;
 		justify-content: center;
