--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -5,12 +5,12 @@
     // background-attachment: fixed;
 }
 
-@mixin sectionImages($bg1Img) {
-    background-image:linear-gradient(rgba(61, 57, 53, 0.76), rgba(61, 57, 53, 0.76)), url($bg1Img);
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
-}
+// @mixin sectionImages($bg1Img) {
+//     background-image:linear-gradient(rgba(61, 57, 53, 0.76), rgba(61, 57, 53, 0.76)), url($bg1Img);
+//     background-attachment: fixed;
+//     background-size: cover;
+//     background-position: center;
+// }
 
 // @mixin partyImages($bgpImg) {
 //     background-image:linear-gradient(rgba(61, 57, 53, 0.76), rgba(61, 57, 53, 0.76)), url($bgpImg);
